tests/neg-macros/newClassParamsMissingArgument/Test_2.scala
//> using options -experimental

@main def Test: Unit = {
  makeClass("foo") // error // error
}
